# GidAppTools

./: .editorconfig  .gitignore  README.rst  all_dependencies.json  blah.md  pyproject.toml  tasks.py
docs/docs_data/: general_todo_data.json
docs/source/: attributions.rst  conf.py  index.rst
gidapptools/: __init__.py  __main__.py  cli_info.py  custom_types.py  errors.py  types.py
gidapptools/abstract_classes/: __init__.py  abstract_meta_factory.py  abstract_meta_item.py
gidapptools/data/: __init__.py  conversion_data.py  general_data.py
gidapptools/general_helper/: ast_helper.py  checker.py  class_helper.py  compress.py  conversion.py  date_time.py  deprecation.py  dict_helper.py  dispatch_table.py  enums.py  file_helper.py  general.py  general_classes.py  hashing.py  import_helper.py  io_helper.py  path_helper.py  string_helper.py  timing.py  typing_helper.py  web_helper.py
gidapptools/gid_argparse/: __init__.py  custom_parser.py
gidapptools/gid_config/: __init__.py  base.py  enums.py  interface.py  meta_factory.py
gidapptools/gid_database/: __init__.py  sqlite_database.py
gidapptools/gid_image/: __init__.py  size_manipulation.py
gidapptools/gid_logger/: enums.py  fake_logger.py  formatter.py  handler.py  logger.py  misc.py  records.py
gidapptools/gid_parsing/: __init__.py  py_log_parsing.py
gidapptools/gid_pytest/: parameter.py
gidapptools/gid_signal/: interface.py  signal_registry.py
gidapptools/gid_utility/: version_item.py
gidapptools/gid_warning/: deprecation.py  experimental.py
gidapptools/gidapptools_qt/: __init__.py  resources_helper.py
gidapptools/gidcolor/: color.py  color_item.py
gidapptools/meta_data/: __init__.py  config_kwargs.py  interface.py
gidapptools/utility/: __init__.py  _debug_tools.py  enums.py  helper.py  kwarg_dict.py  version_item.py
gidapptools/utility_classes/: __init__.py
misc/faked_pack/: pyproject.toml
misc/faked_pack/faked_pack_src/: __init__.py  __main__.py  plugin.py
tools/: convert_compiled_deps.py  create_venv.cmd  frozen_deps.txt  log_pipe_create_venv.cmd  memory_profiling_time.cmd  profiling_to_graph.cmd
(+188 files in other folders)
