[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "faked_pack_src"
authors = [{ name = "fake_author" }]
classifiers = ["License :: OSI Approved :: MIT License"]
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ['version', 'description']
requires-python = ">=3.9"
dependencies = ["Faker==8.12.1"]

[project.urls]
Source = "https://github.com/Giddius/FAKE_URL_DOES_NOT_EXIST"

[project.scripts]

[project.optional-dependencies]

[project.entry-points."gidapptools.meta_item_plugins"]
fake_plugin = "faked_pack_src.plugin:register"

[tool.flit.sdist]
exclude = [
    "misc",
    "temp",
    "docs",
    "tools",
    ".pydeps",
    "tests",
    ".gitattributes",
    ".gitignore",
    ".editorconfig",
    "planning.todo",
    "tasks.py",
]

[tool.autopep8]
ignore = ["E402", "E501"]
max-line-length = 250

[tool.isort]
balanced_wrapping = true
ensure_newline_before_comments = true
group_by_package = true
import_heading_firstparty = "* Local Imports --------------------------------------------------------------------------------------->"
import_heading_gid = "* Gid Imports ----------------------------------------------------------------------------------------->"
import_heading_pyqt = "* PyQt5 Imports --------------------------------------------------------------------------------------->"
import_heading_stdlib = "* Standard Library Imports ---------------------------------------------------------------------------->"
import_heading_thirdparty = "* Third Party Imports --------------------------------------------------------------------------------->"
known_gid = ["gidtools", "gidlogger", "gidqtutils", "gidviewmodels"]
known_pyqt = ["PyQt5"]
length_sort = true
line_length = 200
lines_after_imports = 1
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "PYQT",
    "GID",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.pytest.ini_options]
addopts = "-rP -vv --durations=0 --show-capture=all --color=auto --code-highlight=yes"
